2000-04-06 21:30 GMT-4 David G. Holm <dholm@jsd-llc.com>
  * doc/gmake.txt
    % Change to os2/gcc documentation to show gtos2 for HT_GT_LIB,
      (thanks to Maurilio Longo <maurilio.longo@libero.it> for
      his work on making the gtos2 library work with os2/gcc)

20000406-10:55 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
	* the parser resumes parsing after 'parse errors' (parsing errors
	are non-fatal now)

20000406-08:52 GMT+1 Victor Szakats <info@szelvesz.hu>

   * config/dos/dir.cf
     ! Accidentally broken file restored.

   * utils/hbtest/Makefile
   * utils/hbtest/make_xpp.cmd
     ! Fixed.

   * include/box.ch
     + Some extensions guarded as such.

   * source/rtl/math.c
     + Multithreading related NOTE added.

   * make_b16.bat
     + CLEAN will remove .MAP files.

20000405-15:29 GMT+1 Victor Szakats <info@szelvesz.hu>

   + utils/hbtest/rt_hvma.prg
   * utils/hbtest/*
   * makefile.*
     ! rt_hvm.prg split to make it compile with BCC31 under lower memory
       conditions.

   * source/rtl/devoutp.prg
   * source/rtl/setkey.prg
   * include/hbver.h
   * include/hbapifs.h
   * include/filesys.api
   * include/fileio.ch
   * include/hbset.h
   * include/set.ch
     - Removed local ChangeLogs

20000405-14:28 GMT+3 Alexander Kresin
  * source/pp/ppcore.c
    * bugs fixed, reported by Guy Roussin and Chen Kedem

20000405-10:00 GMT+3 Alexander Kresin
  * contrib/rdd_ads/ads1.c
    * added adsFlush() function
  * contrib/rdd_ads/adsfunc.c
    * Added adsGetRelKeyPos() function

20000405-02:03 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/math.c
     ! exception redefined as _exception for Borland C++ 5.5 and upper.
     ! Disabled math exception handling for Borland C++ 5.3 C++ mode,
       since it won't work. Other Borland C++ version (4.x,5.x) should be 
       also checked in this respect.

   * source/rtl/gtwin/gtwin.c
     ! max()/min() changed to HB_MAX()/HB_MIN()

   * source/rtl/filesys.c